# CPSC5042ClientServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  credentials.csv  server.puml  testStatsCalc.cpp
client/: ClientCS.cpp  ClientTestDriver.cpp
server/: Authenticator.cpp  Authenticator.h  Calculator.cpp  Calculator.h  ClientHandler.cpp  ClientHandler.h  GlobalContext.h  LocalContext.cpp  LocalContext.h  RPCServer.cpp  RPCServer.h  calculateExpressionDriver.cpp  main.cpp
